--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 # pastas de cache do python
 __pycache__
 
+# pastas do virtual (somente a da raiz por conta do /)
+env/
+
+# pasta do vscode
+.vscode/
